--- a/package.json
+++ b/package.json
@@ -3,13 +3,23 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "dependencies": {
+    "node": "^15.4.0",
+    "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/njsm8/doYouKnowMe.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "node": "^15.4.0"
-  }
+  "bugs": {
+    "url": "https://github.com/njsm8/doYouKnowMe/issues"
+  },
+  "homepage": "https://github.com/njsm8/doYouKnowMe#readme"
 }
